integrated student signup api

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "axios": "^1.6.5",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
