--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.2.9",
     "axios": "^1.6.5",
     "framer-motion": "^10.18.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
